iss#240 Get rid of separate test-data folder: ServiceProcessValidateDVMoviesTest migration